helm/values/longhorn-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:

spec:
  tls:
  - hosts:
    - longhorn.vxs.one
    secretName: tls-longhorn-frontend
  rules:
  - host: longhorn.vxs.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
